--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -135,7 +135,7 @@
 			  }
 			}
 
-			+ div > a.autocalc {
+			+ div > a.calcz {
 			  display: inline-block;
 			  padding: .25rem .5rem;
 			  color: #32ab52 !important;
@@ -156,25 +156,25 @@
 			}
 		  }
 
-		  .button-autocalc {
-			display: inline-block;
-			padding: .25rem .5rem;
-			color: $color-primary !important;
-			background: rgba($color-secondary, .4) !important;
-			border: 1px solid rgba($color-primary, .5) !important;
-			box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
-			cursor: pointer;
-			border-radius: 3px;
-			text-transform: initial;
-			font-weight: bold;
-			font-family: inherit;
-			font-size: $text-small;
-			line-height: 1;
-			white-space: nowrap;
-			transition-property: color, background, box-shadow;
-			transition-duration: .75s;
-			transition-timing-function: linear;
-		  }
+			.button-calcz {
+				display: inline-block;
+				padding: .25rem .5rem;
+				color: $color-primary !important;
+				background: rgba($color-secondary, .4) !important;
+				border: 1px solid rgba($color-primary, .5) !important;
+				box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
+				cursor: pointer;
+				border-radius: 3px;
+				text-transform: initial;
+				font-weight: bold;
+				font-family: inherit;
+				font-size: $text-small;
+				line-height: 1;
+				white-space: nowrap;
+				transition-property: color, background, box-shadow;
+				transition-duration: .75s;
+				transition-timing-function: linear;
+			}
 
 		  .ally_def_target_summary {
 			padding-right: 4px;
