--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -319,7 +319,7 @@
   padding: 30px 0 0;
   box-shadow: inset 0 0 8px 2px rgba(#000, .25), 0 0 3px 3px rgba(#000, .15);
   position: relative;
-  overflow: hidden;
+  //overflow: hidden;
   @include respond-below(sm) {
     grid-row: 2/3;
     grid-column: 2 / 2;
