--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -143,6 +143,7 @@ hr {
   width: 100%;
   max-width: 90rem;
   padding: 3rem .5rem 0;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: 12rem 2fr 1fr;
   grid-template-rows: auto 1fr 1rem;
