--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -52,6 +52,7 @@
 @import "components/galaxy_status";
 @import "components/mining";
 @import "components/research_construction_waves";
+//@import "components/research_construction_waves2";
 @import "components/population";
 @import "components/covert_ops";
 @import "components/production";
