--- a/scss/components/_bcalc.scss
+++ b/scss/components/_bcalc.scss
@@ -1,5 +1,6 @@
 /* BCALC
    ---------------------------------*/
+
 #page_bcalc {
   #contents {
     display: table;
@@ -765,5 +766,51 @@
         }
       }
     }
+  }
+}
+
+
+#my_bcalcs {
+  top: 50% !important;
+  left: 50% !important;
+  position: fixed;
+  transform: translate(-50%, -50%);
+  overflow: auto;
+  max-height: 80vh;
+  /* total width */
+  &::-webkit-scrollbar {
+    background-color: $color-secondary;
+    width: 8px;
+  }
+
+  /* background of the scrollbar except button or resizer */
+  &::-webkit-scrollbar-track {
+    background-color: $color-secondary;
+  }
+
+  /* scrollbar itself */
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba($color-secondary, .4);
+    border: 1px solid rgba($color-primary, .5);
+    box-shadow: inset 0 0 2px 0 rgba($color-primary, .4), 0 0 16px 0 rgba(#000, .9);
+    border-radius: 8px;
+  }
+
+  /* set button(top and bottom of the scrollbar) */
+  &::-webkit-scrollbar-button {
+    display: none;
+  }
+
+  > p {
+    &:first-child {
+      position: sticky;
+      right: .5rem;
+      top: 0;
+      display: block;
+    }
+  }
+
+  #bcalclist {
+    margin-top: -29px;
   }
 }
