--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -28,10 +28,10 @@
 
 
 #manual_info {
-  display: inline-block;
+  display: block;
   height: 1.5rem;
   width: 1.5rem;
-  margin: .5rem;
+  margin: .5rem .5rem .5rem auto;
   padding: 0 0 0 .05rem;
   border: 1px solid $color-primary;
   border-radius: 50%;
@@ -263,11 +263,19 @@ span.center {
 }
 
 
-#tab_links li {
-  padding: 0;
+#tab_links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 
-  a {
-    margin: 0 .75rem;
+  li {
+    padding: 0;
+
+    a {
+      margin: 0 .75rem;
+    }
   }
 }
 
