fully standalone skin

--- a/scss/styles-complete.scss
+++ b/scss/styles-complete.scss
@@ -63,4 +63,6 @@
 @import "components/buttons_links";
 @import "components/tables";
 //
+@import "components/scrolls";
+//
 @import "lib/animations";
