--- a/scss/components/_bcalc.scss
+++ b/scss/components/_bcalc.scss
@@ -685,6 +685,9 @@
         }
 
         a {
+          display: inline-block;
+          margin: .25rem !important;
+
           &:first-of-type {
             margin: 0 0 0 .5rem !important;
             color: rgba($color-positive, .75) !important;
@@ -708,19 +711,53 @@
       }
 
       &:nth-of-type(3) {
+        line-height: 24px;
         display: table;
         text-align: left;
-        width: auto;
+        width: 350px;
         position: relative;
         left: 50%;
         transform: translateX(-50%);
-      }
 
-      &:nth-of-type(2),
-      &:nth-of-type(3) {
         a {
-          display: inline-block;
-          margin: .25rem !important;
+          text-align: center;
+          position: absolute;
+          width: 34px;
+          margin: 0 !important;
+          display: flex !important;
+          align-items: center;
+          justify-content: center;
+          transform: translateY(-23px);
+
+          &[onclick="show_side_select(event, 'type', 'fi', false);"],
+          &[onclick="show_side_select(event, 'type', 'fi', true);"] {
+            left: 100px;
+          }
+
+          &[onclick="show_side_select(event, 'type', 'co', false);"],
+          &[onclick="show_side_select(event, 'type', 'co', true);"] {
+            left: 140px;
+          }
+
+          &[onclick="show_side_select(event, 'type', 'fr', false);"],
+          &[onclick="show_side_select(event, 'type', 'fr', true);"] {
+            left: 180px;
+          }
+
+          &[onclick="show_side_select(event, 'type', 'de', false);"],
+          &[onclick="show_side_select(event, 'type', 'de', true);"] {
+            left: 220px;
+          }
+
+          &[onclick="show_side_select(event, 'type', 'cr', false);"],
+          &[onclick="show_side_select(event, 'type', 'cr', true);"] {
+            left: 260px;
+          }
+
+          &[onclick="show_side_select(event, 'type', 'bs', false);"],
+          &[onclick="show_side_select(event, 'type', 'bs', true);"] {
+            left: 300px;
+          }
         }
       }
     }
@@ -777,29 +814,6 @@
   transform: translate(-50%, -50%);
   overflow: auto;
   max-height: 80vh;
-  /* total width */
-  &::-webkit-scrollbar {
-    background-color: $color-secondary;
-    width: 8px;
-  }
-
-  /* background of the scrollbar except button or resizer */
-  &::-webkit-scrollbar-track {
-    background-color: $color-secondary;
-  }
-
-  /* scrollbar itself */
-  &::-webkit-scrollbar-thumb {
-    background-color: rgba($color-secondary, .4);
-    border: 1px solid rgba($color-primary, .5);
-    box-shadow: inset 0 0 2px 0 rgba($color-primary, .4), 0 0 16px 0 rgba(#000, .9);
-    border-radius: 8px;
-  }
-
-  /* set button(top and bottom of the scrollbar) */
-  &::-webkit-scrollbar-button {
-    display: none;
-  }
 
   > p {
     &:first-child {
